--- a/Project Car Prices.ipynb
+++ b/Project Car Prices.ipynb
@@ -1863,7 +1863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#No we'll deal any fields that are missing data."
+    "#Now we'll deal any fields that are missing data."
    ]
   },
   {
@@ -2597,7 +2597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#using the testing dataset to make predictions"
+    "#Using the testing dataset to make predictions"
    ]
   },
   {
