--- a/Project Car Prices.ipynb
+++ b/Project Car Prices.ipynb
@@ -1863,7 +1863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Now we'll deal any fields that are missing data."
+    "#Next we'll work on any fields that are missing data."
    ]
   },
   {
