--- a/Project Car Prices.ipynb
+++ b/Project Car Prices.ipynb
@@ -1629,7 +1629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Now we'll drop the column that are very useful. Althought the make of a car does normally factor into the price fo a car, with this small number of rows and wide variety opf makes, it isn't very useful. Symboling is used for insurance purposes post purchases and isn't useful to determine the price. Lastly normalized_losses has too many fields that are missing data."
+    "#Now we'll drop the columns that isn't helpful. The make of a car does normally factor into the price of a car. However with this small number of rows and wide variety of makes, it isn't very useful. Symboling is used for insurance purposes post purchas and isn't useful to determine the price. Lastly normalized_losses has too many fields that are missing data."
    ]
   },
   {
@@ -2738,7 +2738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
